[workspace]

members = [
    "solver",
    "env_param",
    "planning/engine",
    "planning/planx",
    "planning/timelines",
    "planning/planning",
    "planning/planners",
    "planning/grpc/api",
    "planning/grpc/server",
    "aries_fzn",
    "examples/sat",
    "examples/scheduling",
    "examples/smt",
    "examples/gg",
    "examples/knapsack",
    "validator",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0" }
arcstr = { version = "1.2" }
async-trait = "0.1"
bumpalo = { version = "3.19" }
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
derivative = "2.2"
itertools = { version = "0.14" }
fixedbitset = { version = "0.5.7", default-features = false }
format_num = "0.1.0"
hashbrown = "0.15"
im = "15.1"
lru = "0.16"
malachite = "0.4.14"
num-rational = { version = "0.4.1" }
num-integer = { default-features = false, version = "0.1.44" }
pathfinding = "4.9.1"
prost = { version = "0.12" }
rand = { version = "0.8", features = ["small_rng"] }
regex = { version = "1" }
smallvec = { version = "1.15", features = ["union"] }
structopt = "0.3"
streaming-iterator = "0.1.5"
test_each_file = "0.3.4"
tonic = "0.11.0"
tonic-build = "0.11.0"
tokio = { default-features = false, version = "1.38.0", features = [
    "rt-multi-thread",
    "macros",
] }
tokio-stream = { default-features = false, version = "0.1" }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = "0.3"
transitive = "1.1.0"
vec_map = "0.8"
walkdir = "2.3"
zip = { default-features = false, features = ["deflate"], version = "2.1.3" }
derive_more = { version = "1.0", features = ["display"] }
thiserror = "2"
annotate-snippets = "0.12.4"
idmap = "0.3.0"
compact_str = "0.9.0"

[profile.dev]
opt-level = 0
debug = "line-tables-only" # Keep only the information for backtraces, not debugging (speeds up compilation)

[profile.release]
codegen-units = 8
debug = false     # No debug symbols to keep executables small
lto = "thin"
opt-level = 3
panic = "abort"

# A profile meant for usage in CI, provide reasonable build/execution times. Also enables debug assertions and symbols.
[profile.ci]
inherits = "dev"
opt-level = 3

# A profile meant for profiling in perf, providing all optimizations of release together with debug symbols
[profile.perf]
inherits = "release"
debug = true
