[package]
name = "aries"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <arthur.bit-monnot@laas.fr>"]
edition = "2018"

[dependencies]
structopt = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.6.1"

serde_json = "1.0"
anyhow = "1.0"
aries_collections = { path = "../collections" }
aries_planning = { path = "../planning" }
aries_stn = { path = "../stn" }
aries_sat = { path = "../sat" }

[features]
# reserved for very expensive checks
# for instance that could be checking that
# invariants of the solver are maintained at any time
full_check = []