[package]
name = "aries"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <arthur.bit-monnot@laas.fr>"]
edition = "2018"

[dependencies]
structopt = "0.2"
serde_json = "1.0"
anyhow = "1.0"
matches = "0.1.8"
aries_collections = { path = "../collections" }
aries_backtrack = { path = "../backtrack" }
aries_model = { path = "../model" }
aries_planning = { path = "../planning" }
aries_tnet = { path = "../tnet", features = ["theories"] }
aries_sat = { path = "../sat" }
aries_smt = { path = "../smt" }
env_param = { path = "../env_param" }

[features]
# reserved for very expensive checks
# for instance that could be checking that
# invariants of the solver are maintained at any time
full_check = []

