[package]
name = "aries-bench"
version = "0.1.0"
edition = "2024"

[features]
default = ["plot"]
plot = ["gnuplot", "derive_builder"]


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
readable = "0.1"
comfy-table = "7.0"
itertools = { workspace = true }
gnuplot = { version = "0.0.46", optional = true }
derive_builder = { version = "*", optional = true }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "aries-bench"
path = "src/main.rs"
required-features = ["plot"]
