[package]
name = "aries_collections"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_map = "0.8.1"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
bit-set = "0.5.2"
