[package]
name = "aries_model"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
streaming-iterator = "0.1.5"
aries_backtrack = { path = "../backtrack" }
aries_collections = { path = "../collections" }
aries_utils = { path = "../utils" }


[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"


[[bench]]
name = "bounds"
harness = false