[package]
name = "aries_planners"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <arthur.bit-monnot@laas.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
aries_collections = { path = "../collections" }
aries_backtrack = { path = "../backtrack" }
aries_core = { path = "../core" }
aries_model = { path = "../model" }
aries_planning = { path = "../planning" }
aries_tnet = { path = "../tnet" }
aries_solver = { path = "../solver" }
aries_utils = { path = "../utils" }
env_param = { path = "../env_param" }

[features]
# reserved for very expensive checks
# for instance that could be checking that
# invariants of the solver are maintained at any time
full_check = []

# Will instruct the solver to count CPU cycles in various parts of the solver. (if CPU architecture allows)
cpu_cycles = ["aries_solver/cpu_cycles"]


[[bin]]
name = "planning-domain"
path = "src/bin/planning_domain.rs"
