[package]
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"
name = "aries_planning"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.0"

[dependencies]
anyhow = "1.0"
aries_collections = {path = "../collections"}
aries_model = {path = "../model"}
aries_utils = {path = "../utils"}
env_param = {path = "../env_param"}
fixedbitset = "0.4"
itertools = "0.10"
protobuf = {version = "2", features = ["with-bytes"]}
regex = "1"
streaming-iterator = "0.1.5"

# server binary
# [[bin]]
# name = "server"
# path = "src/upf/server.rs"

# # client binary
# [[bin]]
# name = "client"
# path = "src/upf/client.rs"
