[package]
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"
name = "aries_planning"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
aries_collections = {path = "../collections"}
aries_model = {path = "../model"}
aries_utils = {path = "../utils"}
async-trait = "0.1"
env_param = {path = "../env_param"}
fixedbitset = "0.4"
itertools = "0.10"
prost = "0.9"
regex = "1"
streaming-iterator = "0.1.5"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
name = "upf-server"
path = "src/upf/server.rs"

# client binary
[[bin]]
name = "upf-client"
path = "src/upf/client.rs"
