[package]
name = "aries_planning"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { default-features = false, version = "1.0" }
fixedbitset = { default-features = false, version = "0.4" }
itertools = { default-features = false, version = "0.10" }
streaming-iterator = "0.1.5"
regex = { features = ["std"], default-features = false, version = "1" }
aries_collections = { path = "../collections" }
aries_core = { path = "../core" }
aries_model = { path = "../model" }
aries_utils = { path = "../utils" }
env_param = { path = "../env_param" }
