[package]
name = "aries_smt"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1.8"
aries_sat = { path = "../sat" }
aries_collections = { path = "../collections" }
num-traits = "0.2.14"
