[package]
name = "aries_smt"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries_collections = { path = "../collections" }
aries_backtrack = { path = "../backtrack" }
aries_model = { path = "../model" }
env_param = { path = "../env_param" }
itertools = "0.10.0"
num-traits = "0.2.14"
smallvec = "1.4.2"
