[package]
name = "aries"
version = "0.0.6"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.35" }
streaming-iterator = "0.1.5"
lazy_static = "1.4.0"
vec_map = "0.8.1"
itertools = { default-features = false, version = "0.10" }
bit-set = { default-features = false, version = "0.5.2" }
crossbeam-channel = "0.5"
env_param = { path = "../env_param" }
smallvec = "1.4.2"

[dev-dependencies]
rand = "0.8"
