[package]
name = "aries"
version = "0.0.6"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# If enabled, will instruct the the solver to count cpu cycles at various point of its execution.
# The implementation relies to time-stamp counter and intrinsic for the x86_64 platform.
# If the target platform is not supported, activating this feature will have no effects.
cpu_cycles = []


[dependencies]
anyhow = { workspace = true }
streaming-iterator = "0.1.5"
lazy_static = "1.4.0"
vec_map = "0.8.1"
itertools = { workspace = true }
bit-set = { default-features = false, version = "0.5.2" }
crossbeam-channel = "0.5"
env_param = { path = "../env_param" }
smallvec = "1.4.2"
num-integer = { default-features = false, version = "0.1.44" }
tracing = { workspace = true }
lru = "0.12.3"
rand = { workspace = true }
num-rational = { workspace = true }
hashbrown = "0.15"
num-traits = "*"

[dev-dependencies]
rand = "0.8"
