[package]
name = "aries_tnet"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
num-traits = "0.2"
aries_smt = { path = "../smt", optional = true }
aries_sat = { path = "../sat", optional = true }
aries_collections = { path = "../collections" }

[features]
# When set, the temporal networks in this crate will implement
# the `Theory` trait of `aries_smt`
theories = ["aries_smt", "aries_sat"]

