[package]
name = "aries_tnet"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
num-traits = "0.2"
aries_smt = { path = "../smt" }
aries_collections = { path = "../collections" }
aries_backtrack = { path = "../backtrack" }
aries_model = { path = "../model" }

