[package]
authors = ["Roland Godet <rgodet@laas.fr>"]
edition = "2021"
name = "aries_plan_validator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aries = { path = "../solver" }
unified_planning = { path = "../planning/grpc/api" }
anyhow = { workspace = true }
im = "15.1"
malachite = "0.4.14"
prost = { workspace = true }
regex = "1.5"
