[package]
name = "aries_core"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { default-features = false, version = "1.0.35" }
streaming-iterator = "0.1.5"
aries_backtrack = { path = "../backtrack" }
aries_collections = { path = "../collections" }
aries_utils = { path = "../utils" }
lazy_static = "1.4.0"

