[package]
name = "aries_solver"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

# If enabled, will instruct the the solver to count cpu cycles at various point of its execution.
# The implementation relies to time-stamp counter and intrinsic for the x86_64 platform.
# If the target platform is not support, activating this feature will have no effects.
cpu_cycles = []

[dependencies]
aries_collections = { path = "../collections" }
aries_backtrack = { path = "../backtrack" }
aries_core = { path = "../core" }
aries_model = { path = "../model" }
crossbeam-channel = "0.5"
env_param = { path = "../../env_param" }
itertools = { version = "0.10" }
num-traits = { default-features = false, version = "0.2.14" }

