[package]
name = "aries_chronicles"
version = "0.1.0"
authors = ["Roland Godet <roland.godet@ens-paris-saclay.fr>"]
edition = "2018"

[dependencies]
aries_core = { path = "../../core" }
aries_model = { path = "../../model" }
aries_planning = { path = "../../planning" }
aries_planners = { path = "../../planners" }
aries_solver = { path = "../../solver" }
aries_tnet = { path = "../../tnet" }
aries_utils = { path = "../../utils" }
itertools = "0.10.3"
