[package]
name = "aries_eossp"
version = "0.1.0"
authors = ["Titouan Seraud <titouan.seraud@laas.fr>"]
edition = "2024"

[dependencies]
aries = { path = "../../solver", features = ["cpu_cycles"] }
anyhow = { workspace = true }
clap = { workspace = true }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bin]]
name = "aries-eossp"
path = "main.rs"
