[package]
name = "aries_jobshop"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
aries_backtrack = { path = "../../backtrack" }
aries_core = { path = "../../core" }
aries_model = { path = "../../model" }
aries_solver = { path = "../../solver" }
aries_stn = { path = "../../reasoners/stn" }


[[bin]]
name = "aries-jobshop"
path = "main.rs"