[package]
name = "aries_knapsack"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
aries_core = { path = "../../cp/core" }
aries_model = { path = "../../cp/model" }
aries_solver = { path = "../../cp/solver" }
aries_cp = { path = "../../cp/reasoners/cp" }


[[bin]]
name = "aries-knapsack"
path = "main.rs"