[package]
name = "aries_knapsack"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

[dependencies]
aries = { path = "../../solver", features = ["cpu_cycles"] }
num-rational = "0.4.2"
itertools = "0.13.0"
env_param = { path = "../../env_param" }

[[bin]]
name = "aries-knapsack"
path = "main.rs"
