[package]
name = "aries_marco"
version = "0.1.0"
authors = ["Nika Beriachvili"]
edition = "2024"

[dependencies]
anyhow = { workspace = true }
aries = { path = "../../solver" }
aries_explain = { path = "../../explain" }
clap = { workspace = true }
env_param = { path = "../../env_param" }
itertools = { workspace = true }
varisat-dimacs = "0.2.2"
varisat-formula = "0.2.2"
zip = { default-features = false, features = ["deflate"], version = "2.1.3" }


[[bin]]
name = "aries-marco"
path = "main.rs"
