[package]
name = "aries_sat"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
structopt = "0.3"
anyhow = { default-features = false, version = "1.0" }
aries = { path = "../../solver" }
varisat-dimacs = "0.2.2"
varisat-formula = "0.2.2"
zip = { default-features = false, features = ["deflate"], version = "0.6" }


[[bin]]
name = "aries-sat"
path = "main.rs"
