[package]
name = "aries_sat"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

[dependencies]
structopt = { workspace = true }
anyhow = { workspace = true }
aries = { path = "../../solver" }
varisat-dimacs = "0.2.2"
varisat-formula = "0.2.2"
zip = { workspace = true }


[[bin]]
name = "aries-sat"
path = "main.rs"
