[package]
name = "aries_scheduling"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

[dependencies]
itertools = "0.10"
structopt = "0.3"
anyhow = { default-features = false, version = "1.0" }
aries_collections = { path = "../../cp/collections" }
aries_backtrack = { path = "../../cp/backtrack" }
aries_core = { path = "../../cp/core" }
aries_model = { path = "../../cp/model" }
aries_solver = { path = "../../cp/solver" }
aries_stn = { path = "../../cp/reasoners/stn" }
walkdir = "2.3"


[[bin]]
name = "scheduler"
path = "src/main.rs"
