[package]
name = "aries_scheduling"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

[dependencies]
itertools = "0.10"
structopt = "0.3"
anyhow = { default-features = false, version = "1.0" }
aries = { path = "../../solver" }
walkdir = "2.3"


[[bin]]
name = "scheduler"
path = "src/main.rs"
