[package]
name = "aries_scheduling"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2021"

[dependencies]
itertools = { workspace = true }
structopt = { workspace = true }
anyhow = { workspace = true }
aries = { path = "../../solver", features = ["cpu_cycles"] }
walkdir = { workspace = true }


[[bin]]
name = "scheduler"
path = "src/main.rs"
