[package]
name = "aries_smt"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

[dependencies]
aries_backtrack = { path = "../../backtrack" }
aries_core = { path = "../../core" }
aries_model = { path = "../../model" }
aries_solver = { path = "../../solver" }
aries_tnet = { path = "../../tnet" }

