[package]
authors = ["Selvakumar <selvakumar.h-s@laas.fr>"]
edition = "2018"
name = "aries_grpc_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1"
prost = "0.9"
regex = "1"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
